[package]
name = "solana-token-info"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trust-dns-resolver = "0.23.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
argh = "0.1.12"
solana-sdk = "1.14.0"
solana-client = "1.14.0"
mpl-token-metadata = "4.1.2"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "net", "io-util", "fs"]}
thiserror = "1.0.61"
eyre = "0.6.12"
lazy_static = "1.5.0"
